--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10942,3 +10942,87 @@ a.text-dark:focus {
   }
 }
 
+.navbar-welcome .header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.05);
+  background-color: #fff;
+}
+
+.navbar-welcome .nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 4px 0 10px 0;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.navbar-welcome .logo {
+  width: 150px;
+  margin-top: 12px;
+}
+
+.navbar-welcome .logo img {
+  width: 100%;
+}
+
+.navbar-welcome .nav_list {
+  display: flex;
+  position: relative;
+}
+
+.navbar-welcome .nav_list li {
+  list-style-type: none;
+}
+
+.navbar-welcome .nav_list_link {
+  position: relative;
+  text-decoration: none;
+  padding: 24px 20px;
+  color: #666;
+  display: block;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.navbar-welcome .nav_list_link:hover {
+  color: #dd125f;
+}
+
+.navbar-welcome .nav_list_link.active {
+  color: #dd125f;
+}
+
+.navbar-welcome .nav_list_link.active::after {
+  transform: translateX(-50%) scaleX(1);
+}
+
+.navbar-welcome .nav_list_link::after {
+  position: absolute;
+  content: "";
+  left: 50%;
+  bottom: 8px;
+  width: 50%;
+  height: 4px;
+  background: #dd125f;
+  border-radius: 15px;
+  transform: translateX(-50%) scaleX(0);
+  transition: all 0.2s ease;
+}
+
+.navbar-welcome .nav_list_link:hover::after {
+  transform: translateX(-50%) scaleX(1);
+}
+
+.welcome {
+  margin-top: 12%;
+}
+
+.main-page {
+  display: flex;
+}
+
