--- a/resources/sass/content.welcome.scss
+++ b/resources/sass/content.welcome.scss
@@ -22,6 +22,8 @@
     }
     .sidebar-list {
         list-style: none;
+        width: 100%;
+        padding-left: 0;
     }
     .sidebar-item {
         border: 1px solid #ccc;
@@ -38,6 +40,10 @@
     }
     .book-filter {
         height: 48px;
+    }
+    .book-filter-search {
+        height: 100%;
+        width: 100%;
     }
     .book-search {
         outline: none;
@@ -71,6 +77,7 @@
         margin-top: 2px;
     }
     .sort-by {
+        padding-left: 0;
         list-style: none;
         position: absolute;
         top: 100%;
