--- a/resources/sass/navbar.admin.scss
+++ b/resources/sass/navbar.admin.scss
@@ -1,4 +1,199 @@
-.navbar {
-    color: red;
+.pew1 {
+    transition: width ease-in-out 0.4s;
+    width: 230px;
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    height: inherit;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    overflow-y: hidden;
+    overflow-x: hidden;
+    .toolbar__profile {
+        padding-left: 20px;
+    }
+    .toolbar__profile-box-img img {
+        transition: transform 0.4s ease-in-out;
+        position: relative;
+        top: 0;
+        left: 0;
+    }
+    .activeWidth .toolbar__profile-box-img img {
+        transform: scale(0.5) translate(-50%, -40%);
+    }
+
+    .shadows p {
+        margin: 0;
+    }
+    .pew1:hover .toolbar__profile-box-img img {
+        transform: scale(1);
+    }
+    .toolbar__profile-box {
+        text-align: center;
+        height: 83px;
+    }
+    .toolbar__profile-box img {
+        width: 40px;
+        height: 40px;
+    }
+    .toolbar-namelibrary {
+        color: aliceblue;
+        border-bottom: 1px solid white;
+        padding: 10px 0 10px 20px;
+        display: flex;
+    }
+    .toolbar-namelibrary span {
+        margin-left: 20px;
+    }
+    .toolbar__profile-box {
+        color: aliceblue;
+        display: flex;
+    }
+    .toolbar__profile {
+        padding-top: 20px;
+        border-bottom: 1px solid white;
+    }
+    .toolbar__catagory {
+        padding-left: 20px;
+    }
+    .toolbar__catagory-list {
+        list-style: none;
+        padding: 0;
+        padding: 20px 0 0 0;
+    }
+    .toolbar__catagory-item {
+        margin: 10px 0 10px 0;
+    }
+    .toolbar__catagory-item:hover {
+        background-color: rgb(213, 219, 224);
+    }
+    .toolbar__catagory-link {
+        color: aliceblue;
+        display: flex;
+        align-items: center;
+    }
+    .toolbar__catagory-link p {
+        margin: 0;
+        margin-left: 20px;
+    }
+    .toolbar__catagory-link img {
+        width: 30px;
+        height: 30px;
+    }
+    .toolbar__catagory-link:hover {
+        text-decoration: none;
+        color: aliceblue;
+    }
+
+    .toolbar {
+        border-bottom-right-radius: 3px;
+        border-top-right-radius: 3px;
+        font-size: 14px;
+        width: 100%;
+        height: 100%;
+        background-color: #343a40;
+    }
+    .shadows {
+        display: inline-block;
+        white-space: nowrap;
+        // animation: fadeOut ease-in-out 0.4s forwards;
+    }
+
+    /*activeWidth*/
+
+    .pew1:hover {
+        width: 230px;
+        z-index: 2;
+    }
+    .pew1:hover .shadows {
+        animation: fadeOut ease-in-out 0.4s forwards;
+    }
+}
+.activeWidth .shadows {
+    animation: fadeIn ease-in-out 0.4s forwards;
+}
+.activeWidth .pew1 {
+    width: 71px;
+}
+.activeWidth .toolbar__profile-box-img img {
+    transform: scale(0.5) translate(-50%, -40%);
+}
+.activeWidth .shadows {
+    animation: fadeIn ease-in-out 0.4s forwards;
 }
 
+@media (max-width: 575.98px) {
+    .pew1 {
+        transform: translateX(-100%);
+        transition: transform 0.4s ease-in-out;
+    }
+}
+
+/* // Small devices (landscape phones, less than 768px) */
+@media (max-width: 767.98px) {
+    .pew1 {
+        transform: translateX(-100%);
+        animation: transformI ease-in-out 0.4s forwards;
+        // transition: transform ease-in-out 0.4s;
+    }
+}
+@keyframes transformI {
+    from {
+        transform: translateX(0);
+    }
+    to {
+        transform: translateX(-100%);
+    }
+}
+/* // Medium devices (tablets, less than 992px) */
+@media (max-width: 991.98px) and (min-width: 768px) {
+    .pew1 {
+        width: 72px;
+        transform: translateX(-100%);
+        // animation: transformI ease-in-out 0.4s forwards;
+        transition: transform ease-in-out 0.4s;
+    }
+}
+
+/* // Large devices (desktops, less than 1200px) */
+@media (max-width: 1009px) and (min-width: 992px) {
+    .pew1 {
+        width: 72px;
+        transition: width 0.4s ease-in-out;
+    }
+    .shadows {
+        animation: fadeIn ease-in-out 0.4s forwards;
+        // opacity: 0;
+    }
+    .toolbar__profile-box-img img {
+        transform: scale(0.5) translate(-50%, -40%);
+    }
+    .activeWidth .pew1 {
+        width: 230px;
+        transition: width 0.4s ease-in-out;
+    }
+
+    .activeWidth .shadows {
+        animation: fadeOut ease-in-out 0.4s forwards;
+    }
+
+    .activeWidth .toolbar__profile-box-img img {
+        transform: scale(1);
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+@keyframes fadeOut {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
