--- a/resources/sass/manage.data.scss
+++ b/resources/sass/manage.data.scss
@@ -27,7 +27,85 @@
     .dashboard__content-content-boxct {
         height: inherit;
     }
+    .maincontainer__dashboard-typeImg-info-box {
+        box-shadow: 0 0 1px rgb(0 0 0 / 13%), 0 1px 3px rgb(0 0 0 / 20%);
+        border-radius: 0.25rem;
+        background: #fff;
+        display: -ms-flexbox;
+        display: flex;
+        margin-bottom: 1rem;
+        min-height: 80px;
+        padding: 0.5rem;
+        position: relative;
+        width: 100%;
+    }
+    .maincontainer__dashboard-typeImg-info-box-quantity {
+        display: flex;
+        flex-direction: column;
+    }
+    .maincontainer__dashboard-typeImg-info-box-quantity span {
+        font-size: 16px;
+        margin-left: 5px;
+    }
+    .maincontainer__dashboard-typeImg-info-box-quantity span:nth-child(2) {
+        font-weight: 700;
+    }
+    .maincontainer__dashboard-typeImg {
+        width: 100%;
+        padding: 10px 10px 20px 10px;
+        border-bottom: red 2px solid;
+    }
+    
 }
+
 .activeWidth .dashboard__content {
     margin-left: 72px;
+}
+
+@media (max-width: 575.98px) {
+    .dashboard__content {
+        margin-left: 0;
+    }
+    .dashboard__content {
+        min-height: 962px;
+        height: inherit;
+        /* height: 100%; */
+    }
+}
+
+/* // Small devices (landscape phones, less than 768px) */
+@media (max-width: 767.98px) {
+    .dashboard__content {
+        min-height: 962px;
+        height: inherit;
+        /* height: 100%; */
+        margin-left: 0;
+    }
+}
+@keyframes transformI {
+    from {
+        transform: translateX(0);
+    }
+    to {
+        transform: translateX(-100%);
+    }
+}
+/* // Medium devices (tablets, less than 992px) */
+@media (max-width: 991.98px) and (min-width: 768px) {
+    .dashboard__content {
+        margin-left: 0;
+    }
+}
+
+/* // Large devices (desktops, less than 1200px) */
+@media (max-width: 1009px) and (min-width: 992px) {
+    .dashboard__content {
+        margin-left: 72px;
+        transition: margin-left 0.4s ease-in-out;
+    }
+
+    .activeWidth .dashboard__content {
+        margin-left: 230px;
+        transition: margin-left 0.4s ease-in-out;
+    }
 }
