--- a/resources/sass/manage.list.book.scss
+++ b/resources/sass/manage.list.book.scss
@@ -16,6 +16,9 @@
         border-bottom: 2px solid red;
         padding: 15px 10px 10px 10px;
     }
+    .container__box-showbook-action {
+        text-align: right;
+    }
     .listbook__content-content {
         background-color: white;
         border-radius: 3px;
