--- a/resources/sass/navbar.welcome.scss
+++ b/resources/sass/navbar.welcome.scss
@@ -35,7 +35,8 @@
         color: #666;
         display: block;
         font-size: 14px;
-        font-weight: 700;
+        font-weight: 600;
+        line-height: 20px;
     }
     .nav_list_link:hover {
         color: #dd125f;
