--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,72 +2,6 @@
 @import "variables";
 // Bootstrap
 @import "~bootstrap/scss/bootstrap";
-.navbar-welcome {
-    .header {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        z-index: 1;
-        box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.05);
-        background-color: #fff;
-    }
-    .nav {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 4px 0 10px 0;
-        max-width: 1200px;
-        margin: 0 auto;
-    }
-    .logo {
-        width: 150px;
-        margin-top: 12px;
-    }
-    .logo img {
-        width: 100%;
-    }
-    .nav_list {
-        display: flex;
-        position: relative;
-    }
-    .nav_list li {
-        list-style-type: none;
-    }
-    .nav_list_link {
-        position: relative;
-        text-decoration: none;
-        padding: 24px 20px;
-        color: #666;
-        display: block;
-        font-size: 16px;
-        font-weight: 700;
-    }
-    .nav_list_link:hover {
-        color: #dd125f;
-    }
-    .nav_list_link.active {
-        color: #dd125f;
-    }
-    .nav_list_link.active::after {
-        transform: translateX(-50%) scaleX(1);
-    }
-    .nav_list_link::after {
-        position: absolute;
-        content: "";
-        left: 50%;
-        bottom: 8px;
-        width: 50%;
-        height: 4px;
-        background: #dd125f;
-        border-radius: 15px;
-        transform: translateX(-50%) scaleX(0);
-        transition: all 0.2s ease;
-    }
-    .nav_list_link:hover::after {
-        transform: translateX(-50%) scaleX(1);
-    }
-}
 
 .welcome {
     margin-top: 12%;
@@ -87,7 +21,7 @@
 html,
 body {
     height: 100%;
-    font-family: "Times New Roman", Times, serif;
+    font-family: 'Nunito', sans-serif;
 }
 .book {
     position: relative;
