--- a/resources/sass/welcome.scss
+++ b/resources/sass/welcome.scss
@@ -1,61 +1,63 @@
-#home {
-    height: 86px;
-}
-
-.toTop {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: #dd125f;
-    position: fixed;
-    bottom: 60px;
-    right: 30px;
-    outline: none;
-    border: none;
-    display: none;
-    transition: all 0.4s ease-out 0s;
-    -webkit-transition: all 0.4s ease-out 0s;
-    z-index: 99;
-}
-
-.toTop-icon {
-    color: #fff;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.slideanim {
-    visibility: hidden;
-}
-
-.slide {
-    animation-name: slide;
-    -webkit-animation-name: slide;
-    animation-duration: 1s;
-    -webkit-animation-duration: 1s;
-    visibility: visible;
-}
-
-@keyframes slide {
-    0% {
-        opacity: 0;
-        transform: translateY(70%);
+body {
+    #home {
+        height: 86px;
     }
-    100% {
-        opacity: 1;
-        transform: translateY(0%);
-    }
-}
 
-@-webkit-keyframes slide {
-    0% {
-        opacity: 0;
-        -webkit-transform: translateY(70%);
+    .toTop {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        background-color: #dd125f;
+        position: fixed;
+        bottom: 60px;
+        right: 30px;
+        outline: none;
+        border: none;
+        display: none;
+        transition: all 0.4s ease-out 0s;
+        -webkit-transition: all 0.4s ease-out 0s;
+        z-index: 99;
     }
-    100% {
-        opacity: 1;
-        -webkit-transform: translateY(0%);
+
+    .toTop-icon {
+        color: #fff;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    .slideanim {
+        visibility: hidden;
+    }
+
+    .slide {
+        animation-name: slide;
+        -webkit-animation-name: slide;
+        animation-duration: 1s;
+        -webkit-animation-duration: 1s;
+        visibility: visible;
+    }
+
+    @keyframes slide {
+        0% {
+            opacity: 0;
+            transform: translateY(70%);
+        }
+        100% {
+            opacity: 1;
+            transform: translateY(0%);
+        }
+    }
+
+    @-webkit-keyframes slide {
+        0% {
+            opacity: 0;
+            -webkit-transform: translateY(70%);
+        }
+        100% {
+            opacity: 1;
+            -webkit-transform: translateY(0%);
+        }
     }
 }
