fix grid system content

--- a/resources/sass/welcome.scss
+++ b/resources/sass/welcome.scss
@@ -1,4 +1,22 @@
 body {
+    @media (min-width: 1200px) {
+        .section {
+            padding-left: 10px;
+            padding-right: 10px;
+            max-width: 1200px;
+        }
+    }
+
+    .col-xl-2-4 {
+        flex: 0 0 20%;
+        max-width: 20%;
+    }
+
+    .col-xl-9-6 {
+        flex: 0 0 80%;
+        max-width: 80%;
+    }
+
     #home {
         height: 86px;
     }
@@ -9,8 +27,8 @@ body {
         border-radius: 50%;
         background-color: #dd125f;
         position: fixed;
-        bottom: 60px;
-        right: 30px;
+        bottom: 50px;
+        right: 10px;
         outline: none;
         border: none;
         display: none;
