--- a/resources/sass/navbar.welcome.scss
+++ b/resources/sass/navbar.welcome.scss
@@ -4,13 +4,14 @@
     left: 0;
     right: 0;
     z-index: 1;
+    height: 86px;
     box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.05);
     background-color: #fff;
     .nav {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 4px 0 8px 0;
+        padding: 8px 0 8px 0;
         margin: 0 auto;
     }
     .logo {
