--- a/resources/sass/manage.book.scss
+++ b/resources/sass/manage.book.scss
@@ -90,7 +90,6 @@
     }
     .addbook__content-content-boxct {
         height: inherit;
-        
     }
     .maincontainer__thethird-ISBN {
         display: flex;
@@ -123,7 +122,7 @@
     }
     .maincontainer__thethird-choosepicture {
         width: 70%;
-        // height: 70%; 
+        // height: 70%;
         margin: auto;
         text-align: center;
         /* margin-top: 10%; */
@@ -147,14 +146,28 @@
         width: 95%;
         padding-top: 25px;
         margin: auto;
+        border-bottom: 2px solid rgb(0 0 0 / 13%);
+        box-shadow: 0 0 1px rgb(0 0 0 / 13%), 0 1px 3px rgb(0 0 0 / 20%);
+    }
+    .maincontainer__thethird-col3-boxct1 {
+        background-color: #e9ecef;
+        height: 100%;
+        width: 95%;
+        padding-top: 25px;
+        margin: auto;
+        box-shadow: 0 0 1px rgb(0 0 0 / 13%), 0 1px 3px rgb(0 0 0 / 20%);
     }
     .maincontainer__thethird-col3 {
         margin-top: 20px;
+        height: inherit;
     }
 
     .pew1:hover {
         width: 230px;
         z-index: 2;
+    }
+    .addbook-button {
+        text-align: right;
     }
 }
 
