--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -39,7 +39,7 @@
 html,
 body {
     height: 100%;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     color: #333;
 }
 .book {
@@ -62,4 +62,13 @@ body {
     to {
         opacity: 1;
     }
+}
+::-webkit-scrollbar {
+    width: 10px;
+    background: light rgba(165, 157, 157, 0.5);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgba(165, 157, 157, 0.5);
+    border-radius: 5px;
 }
