edit-addbook-edit-dashboard

--- a/resources/sass/manage.book.scss
+++ b/resources/sass/manage.book.scss
@@ -169,6 +169,12 @@
     .addbook-button {
         text-align: right;
     }
+    .aothatsuluon {
+        text-align: center;
+    }
+    .aothatsuluon button {
+        padding: 10px 25px 10px 25px;
+    }
 }
 
 .activeWidth .addbook__content {
