--- a/resources/sass/manage.data.scss
+++ b/resources/sass/manage.data.scss
@@ -29,23 +29,21 @@
     }
 
     /*ribbon*/
-    .dashboard-money-content {
-        width: 100%;
-        display: block;
-        padding: 20px;
-        max-width: 1320px;
-        margin: 0 auto;
-        border: solid 2px black;
-    }
     .dashboard-money-content-total {
-        text-align: center;
-        align-self: center;
-        margin: auto;
+        display: flex;
+        align-items: center;
     }
-    .dashboard-money-content-total .col-xl-6 {
-        margin: auto;
+    .dashboard-money-content-total .col-xl-5 {
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .dashboard-money-content-total .col-xl-2 {
+        /* margin: auto; */
         /* border: 1px solid red; */
         /* height: 100px; */
+        text-align: center;
+        margin-left: auto;
+        height: 30px;
         background-color: #986794;
         border-radius: 13px;
         padding: 5px;
@@ -130,7 +128,8 @@
     }
     .dashboard__content-dashboardMoney-search label {
         background-color: #3490dc;
-        color: black;font-size: 14px;
+        color: black;
+        font-size: 14px;
     }
 }
 
