--- a/resources/sass/manage.book.scss
+++ b/resources/sass/manage.book.scss
@@ -1,28 +1,67 @@
 // .ManageBook {
 //     color: yellow;
 // }
-
 .addbook__content {
     margin-left: 230px;
     flex-wrap: wrap;
     background-color: #e9ecef;
     transition: margin-left ease-in-out 0.4s;
     height: inherit;
-
+    .form-upload {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        align-content: center;
+        margin: 10px 10px;
+        .link-img {
+            width: 180px;
+            height: 200px;
+            background-color: white;
+            border: none;
+            border-radius: 10px;
+            box-shadow: 1px 0px 6px 1px rgb(0 0 0 / 19%);
+            cursor: inherit;
+        }
+        img {
+            width: 130px;
+            height: 160px;
+            position: absolute;
+            margin-top: -48px;
+            border: none;
+            border-radius: 10px;
+            object-fit: cover;
+        }
+        .btn-ct-primary {
+            border: 2px solid #5e72e4;
+            border-radius: 10px;
+            padding: 4px 20px;
+            background-color: #5e72e4;
+            color: white;
+        }
+        .alert-upload {
+            padding: 0;
+            color: #ca001f;
+            background-color: none;
+            border: none;
+            font-size: 12px;
+            height: auto;
+        }
+    }
+    .hidden {
+        display: none !important;
+    }
     .addbook__content-header-box span {
         font-size: 14px;
     }
-
     .maincontainer__profile {
         padding-right: 1.5%;
         /* margin-left: auto; */
     }
-
     .maincontainer__profile-box-list {
         list-style: none;
         color: black;
     }
-
     .maincontainer__profile-box {
         border: 1px solid black;
         position: absolute;
@@ -62,10 +101,8 @@
         color: black;
         opacity: 0.5;
     }
-
     /*content*/
     /*header*/
-
     .addbook__content-header {
         padding: 15px 5px;
     }
@@ -74,7 +111,6 @@
         align-items: center;
         justify-content: space-between;
     }
-
     .addbook__content-content {
         background-color: white;
         border-radius: 3px;
@@ -83,7 +119,6 @@
         max-width: 100%;
         height: inherit;
     }
-
     .addbook__content-content-header {
         border-bottom: 2px solid red;
         padding: 15px 10px 10px 10px;
@@ -107,10 +142,6 @@
     .maincontainer__thethird-ISBN-input input {
         height: 100%;
     }
-    .addbook__content-content-boxct input {
-        // width: 100%;
-    }
-
     .maincontainer__thethird-col8 .row {
         margin: 20px 0;
     }
@@ -161,7 +192,6 @@
         margin-top: 20px;
         height: inherit;
     }
-
     .pew1:hover {
         width: 230px;
         z-index: 2;
@@ -185,6 +215,7 @@
     margin-left: 72px;
 }
 
+
 /*activeWidth*/
 
 .activeWidth .addbook__content {
@@ -199,6 +230,7 @@
         opacity: 0;
     }
 }
+
 @keyframes fadeOut {
     from {
         opacity: 0;
@@ -207,6 +239,7 @@
         opacity: 1;
     }
 }
+
 * {
     box-sizing: border-box;
 }
@@ -229,7 +262,9 @@
     }
 }
 
+
 /* // Small devices (landscape phones, less than 768px) */
+
 @media (max-width: 767.98px) {
     .addbook__content {
         min-height: 962px;
@@ -238,6 +273,7 @@
         margin-left: 0;
     }
 }
+
 @keyframes transformI {
     from {
         transform: translateX(0);
@@ -246,33 +282,36 @@
         transform: translateX(-100%);
     }
 }
+
+
 /* // Medium devices (tablets, less than 992px) */
+
 @media (max-width: 991.98px) and (min-width: 768px) {
     .addbook__content {
         margin-left: 0;
     }
 }
 
+
 /* // Large devices (desktops, less than 1200px) */
+
 @media (max-width: 1009px) and (min-width: 992px) {
     .addbook__content {
         margin-left: 72px;
         transition: margin-left 0.4s ease-in-out;
     }
-
     .toolbar__profile-box-img img {
         transform: scale(0.5) translate(-50%, -40%);
     }
-
     .activeWidth .addbook__content {
         margin-left: 230px;
         transition: margin-left 0.4s ease-in-out;
     }
-
     .activeWidth .toolbar__profile-box-img img {
         transform: scale(1);
     }
 }
+
 @keyframes fadeIn {
     from {
         opacity: 1;
@@ -281,6 +320,7 @@
         opacity: 0;
     }
 }
+
 @keyframes fadeOut {
     from {
         opacity: 0;
