--- a/resources/sass/navbar.book.scss
+++ b/resources/sass/navbar.book.scss
@@ -4,7 +4,7 @@
     left: 0;
     right: 0;
     height: 86px;
-    z-index: 1;
+    z-index: 10;
     box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.05);
     background-color: #fff;
     .nav {
@@ -109,7 +109,7 @@
         right: 30px;
         cursor: pointer;
     }
-    .no-cart {
+    .nav-no-cart {
         display: none;
     }
     .nav-cart--no-cart-text {
