complete-edit-book

--- a/resources/sass/manage.book.scss
+++ b/resources/sass/manage.book.scss
@@ -16,6 +16,11 @@
         font-size: 12px;
         height: 20px;
     }
+    .delete-btn {
+        background-color: #dc3545;
+        color: white;
+        border-color: #dc3545;
+    }
     .no-gutters {
         display: flex;
     }
